=head1 NAME

Bric::Changes - Bricolage Changes

=head1 DESCRIPTION

This document lists the Changes to Bricolage introduced with each release.

=head1 VERSION 1.11.1 (2008-??-??)

=head2 Improvements

=over

=item *

Added reverse date sorting option on desks (newest items first). Suggested
by Bret Dawson. [Greg Heo]

=item *

Updated Xinha include script to reflect latest Xinha updates. [Matt Rolf]

=item *

Updated SFTP.pm to use the faster Net::SSH2. [Sarah Mercier, Matt Rolf, Charlie Reitsma, Michael Herring]

=back

=head2 Bug Fixes

=over

=item *

Fixed non-standard installation path being ignored if changed during multi 
installation mode. This was done by changing the defaults files to include
the C<BRICOLAGE_ROOT> variable. So when C<BRICOLAGE_ROOT> is changed and the
others are then evaled they get changed too. [Paul Orrock]

=item * 

Updated Admin.pod to ensure that we have at least version 1.16 of
Params::CallbackRequest so that we detect mod_perl2 correctly when running
Apache2. [Paul Orrock]

=item *

Fixed CCS bug which was preventing the jump buttons from displaying in Firefox
and Safari. [Matt Rolf]

=back

=head1 VERSION 1.11.0 (2008-04-30)

=head2 New Features

=over

=item *

Added pick-a-type dropdown to Job Manager, so you can constrain the jobs
listed to, for example, only today's job or only failed jobs. [Scott]

=item *

Added support for the FCKeditor WYSIWYG editor. See
L<http://www.fckeditor.net/> for details and a demo. Sponsored by Freerun
Technologies. [David]

=item *

Added support for MySQL 5.0.3 or later, from Andrei Arsu's 2006 Google Summer
of Code project. [Andrei Arsu]

=item *

Added a C<NONE> function to L<Bric::Util::DBI|Bric::Util::DBI>. For any
C<list> parameter where you could've used C<ANY> before, you can now also use
C<NONE> to return only objects that I<don't> match. [Scott]

=item *

Added support for Apache 2. See L<Switching to Apache 2 in